# OpCoSerializer

./: .gitignore  CHANGELOG.md  LICENSE  README.md  build.sh
.github/workflows/: BuildAndTest.yml
Scripts/: install.sh
docs/: AddingCustomSerializers.md  AddingCustomTypeSerialization.md
include/OpCoSerializer/: Common.hpp  JsonSerializer.hpp  OpCoSerializer.hpp  Properties.hpp
include/OpCoSerializer/Json/: JsonSerializer.hpp  JsonSerializerSettings.hpp  JsonTypeSerializer.hpp
test/: CMakeLists.txt  CommonTests.cpp  JsonSerializerTests.cpp  PropertiesTests.cpp  Stub.cpp
